# cledatatoolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yaml  test-build.yaml
src/: census.py  spatial.py
src/cledatatoolkit/: __init__.py  ago_helpers.py  census.py  property.py  spatial.py
