[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cle-data-toolkit"
version = "1.0.1"
authors = [
  { name="Shelley Murphy", email="smurphy3@clevelandohio.gov"},
  { name="Sam Martinez", email="smartinez2@clevelandohio.gov"},
  { name="Dro Sohrabian", email="dsohrabian@clevelandohio.gov"}
]
description="A project developed by the City of Cleveland Office of Urban Analytics and Innovation, built to simplify civic data processing for the public."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "geopandas",
  "pandas",
  "requests==2.31.0",
  "ipykernel",
  "arcgis==2.2.0",
  "libpysal",
  "dask[dataframe]"
]

[project.urls]
Homepage="https://github.com/City-of-Cleveland/cledatatoolkit/"
Issues="https://github.com/City-of-Cleveland/cledatatoolkit/issues"
